--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,8 @@ textarea {
   height: 80px;
   width: 100%;
   padding: 5px;
+  border: 1px solid var(--clr-black);
+  outline: none;
 }
 .textarea-wr {
   grid-column: 1/3;
@@ -104,29 +106,6 @@ textarea {
 }
 .add-btn-wr {
   padding: 0;
-}
-button {
-  width: 100px;
-  height: 40px;
-  border: 1px solid var(--clr-black);
-  background-color: #ccc;
-  cursor: pointer;
-}
-button:active {
-  background-color: #aaa;
-  border: 2px solid var(--clr-black);
-}
-.delete-btn {
-  background-color: #fca5a5;
-}
-.add-btn {
-  background-color: #93c5fd;
-}
-.edit-btn {
-  background-color: #fdba74;
-}
-.submit-btn {
-  background-color: #86efac;
 }
 .card-footer {
   margin-top: 30px;
@@ -155,7 +134,7 @@ button:active {
   border-bottom: 1px solid var(--clr-black);
   font-size: 0.8rem;
 }
-.submittedExperienceItem {
+.submittedItem {
   padding: 20px 40px;
   margin: 10px 40px;
   display: flex;
